# API-Football-Explorer

./: create_db.py  pyproject.toml  requirements.txt
app/: __init__.py
app/api/: api_client.py  api_connection.py  connection_tester.py  countries_service.py  country_service.py  fixture_service.py  fixtures_events_service.py  fixtures_h2h_service.py  fixtures_lineups_service.py  fixtures_players_service.py  fixtures_rounds_service.py  fixtures_statistics_service.py  injuries_service.py  league_service.py  leagues_seasons_service.py  leagues_service.py  predictions_service.py  seasons_service.py  standings_service.py  status_service.py  team_stats_service.py  teams_seasons_service.py  teams_service.py  timezone_service.py  venues_service.py
app/controllers/: __init__.py  countries_controller.py  home_controller.py  leagues_controller.py  leagues_dashboard_controller.py  leagues_seasons_controller.py  season_countries_controller.py  seasons_controller.py  status_controller.py  test_api_controller.py
app/models/: country.py
app/settings/: config.py  endpoint_config.py
app/templates/: base.html  countries.html  country_leagues.html  error.html  index.html  leagues.html  leagues_dashboard.html  season_countries.html  seasons.html
tests/api_tests/: test_status_service.py
