[tool.poetry]
name = "api-football-explorer"
version = "0.1.0"
description = ""
authors = ["Kemal Yilmaz <kemalylmz@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
alembic = "1.13.3"
blinker = "1.8.2"
certifi = "2024.8.30"
charset-normalizer = "3.4.0"
click = "8.1.7"
colorama = "0.4.6"
flask = "3.0.3"
flask-migrate = "4.0.7"
flask-sqlalchemy = "3.1.1"
idna = "3.10"
itsdangerous = "2.2.0"
jinja2 = "3.1.4"
mako = "1.3.5"
markupsafe = "3.0.1"
requests = "2.32.3"
sqlalchemy = "2.0.35"
typing-extensions = "4.12.2"
urllib3 = "2.2.3"
werkzeug = "3.0.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
